# ripncode

./: .gitignore  .gitmodules  LICENSE-BSD  Makefile.am  bootstrap  configure.ac
src/: Makefile.am  buffer.c  buffer.h  device-cdparanoia.c  device.c  device.h  encoder-flac.c  encoder.c  encoder.h  format.c  format.h  metadata-tracklist.c  metadata.c  metadata.h  replaygain.c  replaygain.h  ripncode.c  ripncode.h  rnc.c  setup.c  setup.h  track.h
src/tests/: buffer-test.c  seek-test.c
